--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -123,17 +123,15 @@ brew "zsh"
 
 {{- if eq .environment "work" }}
 
-brew "ansible-lint"
-brew "ansible"
 brew "aws-auth"
 brew "awscli"
-brew "azure-cli"
+# brew "azure-cli"
 brew "checkov"
 brew "cloud-nuke"
 brew "docker-credential-helper"
 brew "docker"
 brew "dockutil"
-brew "gem-overcommit"
+# brew "gem-overcommit"
 brew "gitmoji"
 brew "go-jira"
 brew "iam-policy-json-to-terraform"
@@ -224,7 +222,6 @@ cask "wireshark"
 
 {{- if eq .environment "personal" }}
 
-cask "arq"
 cask "anylist"
 cask "brave-browser"
 cask "discord"
@@ -234,7 +231,6 @@ cask "kindle"
 cask "mailmate"
 cask "minecraft"
 cask "parallels"
-cask "postman"
 cask "private-internet-access"
 cask "skim"
 cask "tor-browser-alpha"
