--- a/home/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -101,7 +101,7 @@ defaults write com.apple.finder FXInfoPanesExpanded -dict \
     Privileges -bool true
 
 # Show the ~/Library folder
-chflags nohidden ~/Library && xattr -d com.apple.FinderInfo ~/Library
+# chflags nohidden ~/Library && xattr -d com.apple.FinderInfo ~/Library
 
 ###############################################################################
 # Trackpad, mouse, keyboard, Bluetooth accessories, and input                 #
