--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -162,7 +162,6 @@ cask "datagrip"
 cask "devonthink"
 cask "docker"
 cask "dotnet-sdk"
-cask "dropbox-beta"
 cask "elgato-stream-deck"
 cask "firefox"
 cask "font-fira-code-nerd-font"
@@ -216,6 +215,7 @@ cask "zotero"
 
 cask "openlens"
 cask "drawio"
+cask "dropbox"
 cask "wireshark"
 
 {{- end }}
@@ -225,6 +225,7 @@ cask "wireshark"
 cask "anylist"
 cask "brave-browser"
 cask "discord"
+cask "dropbox-beta"
 cask "fastscripts"
 cask "imazing"
 cask "kindle"
