--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -6,7 +6,6 @@ tap "1password/tap"
 tap "buo/cask-upgrade"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "jandedobbeleer/oh-my-posh"
@@ -69,7 +68,6 @@ brew "less"
 brew "lesspipe"
 brew "libmagic"
 brew "lnav"
-brew "mas"
 brew "mdcat"
 brew "mdless"
 brew "minikube"
@@ -125,13 +123,11 @@ brew "zsh"
 
 brew "aws-auth"
 brew "awscli"
-# brew "azure-cli"
 brew "checkov"
 brew "cloud-nuke"
 brew "docker-credential-helper"
 brew "docker"
 brew "dockutil"
-# brew "gem-overcommit"
 brew "gitmoji"
 brew "go-jira"
 brew "iam-policy-json-to-terraform"
@@ -147,7 +143,7 @@ brew "terraform-docs"
 # = Homebrew Casks
 # ============================================================================
 
-cask "1password-beta"
+cask "1password"
 cask "1password-cli"
 cask "airbuddy"
 cask "alfred"
@@ -187,13 +183,13 @@ cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
 cask "obsidian"
-cask "omnifocus"
+## cask "omnifocus" Installed via TestFlight
 cask "postman"
 cask "powershell"
 cask "pycharm"
 cask "raindropio"
 cask "safari-technology-preview"
-cask "setapp"
+## cask "setapp" Installed once manually
 cask "silentknight"
 cask "signal"
 cask "sf-symbols"
@@ -213,8 +209,10 @@ cask "zotero"
 
 {{- if eq .environment "work" }}
 
-cask "openlens"
+cask "amazon-chime"
 cask "drawio"
+cask "openlens"
+cask "sublime-merge"
 cask "wireshark"
 
 {{- end }}
@@ -299,37 +297,37 @@ cask "warp"
 # = VSCode Extensions
 # ============================================================================
 
-vscode "1Password.op-vscode"
-vscode "4ops.packer"
-vscode "aaron-bond.better-comments"
-vscode "alefragnani.Bookmarks"
-vscode "atlassian.atlascode"
-vscode "bibhasdn.unique-lines"
-vscode "bierner.markdown-preview-github-styles"
-vscode "Catppuccin.catppuccin-vsc"
-vscode "chrisdias.vscode-opennewinstance"
-vscode "darkriszty.markdown-table-prettify"
-vscode "DavidAnson.vscode-markdownlint"
-vscode "eamodio.gitlens"
-vscode "EditorConfig.EditorConfig"
-vscode "fredwangwang.vscode-hcl-format"
-vscode "GitHub.remotehub"
-vscode "github.vscode-github-actions"
-vscode "GitHub.vscode-pull-request-github"
-vscode "golang.go"
-vscode "googlecloudtools.cloudcode"
-vscode "hashicorp.hcl"
-vscode "hashicorp.terraform"
-vscode "jasonnutter.vscode-codeowners"
-vscode "mechatroner.rainbow-csv"
-vscode "mindaro-dev.file-downloader"
-vscode "ms-python.python"
-vscode "ms-vscode.powershell"
-vscode "ms-vscode.remote-repositories"
-vscode "redhat.ansible"
-vscode "redhat.vscode-yaml"
-vscode "richie5um2.vscode-sort-json"
-vscode "szTheory.vscode-packer-powertools"
-vscode "wesbos.theme-cobalt2"
-vscode "wholroyd.jinja"
-vscode "yzhang.markdown-all-in-one"
+## vscode "1Password.op-vscode"
+## vscode "4ops.packer"
+## vscode "aaron-bond.better-comments"
+## vscode "alefragnani.Bookmarks"
+## vscode "atlassian.atlascode"
+## vscode "bibhasdn.unique-lines"
+## vscode "bierner.markdown-preview-github-styles"
+## vscode "Catppuccin.catppuccin-vsc"
+## vscode "chrisdias.vscode-opennewinstance"
+## vscode "darkriszty.markdown-table-prettify"
+## vscode "DavidAnson.vscode-markdownlint"
+## vscode "eamodio.gitlens"
+## vscode "EditorConfig.EditorConfig"
+## vscode "fredwangwang.vscode-hcl-format"
+## vscode "GitHub.remotehub"
+## vscode "github.vscode-github-actions"
+## vscode "GitHub.vscode-pull-request-github"
+## vscode "golang.go"
+## vscode "googlecloudtools.cloudcode"
+## vscode "hashicorp.hcl"
+## vscode "hashicorp.terraform"
+## vscode "jasonnutter.vscode-codeowners"
+## vscode "mechatroner.rainbow-csv"
+## vscode "mindaro-dev.file-downloader"
+## vscode "ms-python.python"
+## vscode "ms-vscode.powershell"
+## vscode "ms-vscode.remote-repositories"
+## vscode "redhat.ansible"
+## vscode "redhat.vscode-yaml"
+## vscode "richie5um2.vscode-sort-json"
+## vscode "szTheory.vscode-packer-powertools"
+## vscode "wesbos.theme-cobalt2"
+## vscode "wholroyd.jinja"
+## vscode "yzhang.markdown-all-in-one"
