--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -79,7 +79,6 @@ brew "nmap"
 brew "node"
 brew "openssl"
 brew "p7zip"
-brew "packer"
 brew "pandoc"
 brew "pinentry-mac"
 brew "pipx"
@@ -104,13 +103,11 @@ brew "tmuxinator"
 brew "trash"
 brew "tree"
 brew "ttscoff/thelab/gather-cli"
-brew "vagrant-completion"
 brew "vim"
 brew "virtualenv"
 brew "warrensbox/tap/tfswitch"
 brew "watch"
 brew "wget"
-brew "whatmask"
 brew "whois"
 brew "wifi-password"
 brew "yamllint"
@@ -143,7 +140,6 @@ brew "terraform-docs"
 # = Homebrew Casks
 # ============================================================================
 
-cask "1password"
 cask "1password-cli"
 cask "airbuddy"
 cask "alfred"
@@ -209,6 +205,7 @@ cask "zotero"
 
 {{- if eq .environment "work" }}
 
+cask "1password"
 cask "amazon-chime"
 cask "drawio"
 cask "openlens"
@@ -219,13 +216,14 @@ cask "wireshark"
 
 {{- if eq .environment "personal" }}
 
+cask "1password-beta"
 cask "anylist"
 cask "brave-browser"
+cask "curseforge"
 cask "discord"
 cask "dropbox-beta"
 cask "fastscripts"
 cask "imazing"
-cask "kindle"
 cask "mailmate"
 cask "minecraft"
 cask "parallels"
