--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -1,4 +1,4 @@
-{{- if eq .environment "work" }}
+{{- if eq .work true }}
 
 ################################################################################
 # Legacy
