--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -28,7 +28,7 @@
 [user]
     name = Mark E. Schill
     email = {{ .email }}
-    signingkey = {{ .github_ssh_key }}
+
 
 [alias]
     # Because I constantly forget how to do this
@@ -159,7 +159,7 @@ followTags = true
 
 [commit]
   template = ~/.gitmessage
-  gpgsign = true
+  gpgsign = false
   verbose = true
 
 [gpg]
