--- a/home/.chezmoiscripts/linux/run_onchange_before_install-gh.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-gh.sh.tmpl
@@ -1,4 +1,22 @@
-{{ if (eq .osid "linux-ubuntu") -}}
+{{ if and (eq .osid "linux-fedora" "linux-nobara") (not .transient) -}}
+
+#!/bin/sh
+
+# https://github.com/cli/cli/blob/trunk/docs/install_linux.md
+
+sudo dnf install 'dnf-command(config-manager)'
+
+{{ if eq .osid "linux-nobara" -}}
+sudo dnf4 config-manager --add-repo https://cli.github.com/packages/rpm/gh-cli.repo
+{{ else }}
+sudo dnf config-manager --add-repo https://cli.github.com/packages/rpm/gh-cli.repo
+{{ end -}}
+
+sudo dnf install -y gh
+
+{{ end -}}
+
+{{- if and (eq .osid "linux-pop" "linux-ubuntu") (not .transient) -}}
 
 #!/bin/sh
 
@@ -7,6 +25,6 @@
 curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg
 echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
 sudo apt update
-sudo apt install gh
+sudo apt install -y gh
 
 {{ end -}}
