feat: adds history updates
Signed-off-by: Mark E. Schill <Mark.Schill@cmschill.net>

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -11,6 +11,7 @@ sudo apt -y install curl \
     ruby \
     ruby-colorize \
     ruby-dev \
+    silversearcher-ag \
     tmux \
     vim \
     wget \
@@ -20,6 +21,7 @@ sudo apt -y install curl \
 
 sudo yum -y install curl \
     gem \
+    the_silver_searcher \
     tmux \
     vim \
     wget \
@@ -44,6 +46,7 @@ sudo dnf -y install bzip2 \
     neofetch \
     openssl-devel \
     readline-devel \
+    the_silver_searcher \
     tmux \
     util-linux-user \
     vim \
@@ -56,6 +59,7 @@ sudo dnf -y install bzip2 \
 
 sudo yum -y install curl \
     gem \
+    the_silver_searcher \
     tmux \
     vim \
     wget \
