--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -24,6 +24,22 @@ output = yaml
 region = us-west-2
 sso_account_id = 087633845042
 
+
+################################################################################
+# Management Account
+################################################################################
+
+# Management Account
+[profile corp-admin]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = AWSAdministratorAccess
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 740083677251
+
+
 ################################################################################
 # Infrastructure & Security
 ################################################################################
