Add home/.config/fastfetch/config.jsonc Update home/.Brewfile

--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -6,8 +6,6 @@ tap "1password/tap"
 tap "buo/cask-upgrade"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
 tap "jandedobbeleer/oh-my-posh"
 tap "ttscoff/thelab"
 tap "warrensbox/tap"
@@ -68,13 +66,12 @@ brew "less"
 brew "lesspipe"
 brew "libmagic"
 brew "lnav"
-brew "mdcat"
 brew "mdless"
 brew "minikube"
 brew "multimarkdown"
 brew "mysql"
 brew "ncdu"
-brew "neofetch"
+brew "fastfetch"
 brew "nmap"
 brew "node"
 brew "openssl"
