--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -220,6 +220,7 @@ cask "discord"
 cask "dropbox-beta"
 cask "fastscripts"
 cask "imazing"
+cask "little-snitch"
 cask "mailmate"
 cask "minecraft"
 cask "parallels"
