--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -197,7 +197,7 @@ cask "visual-studio-code-insiders"
 cask "visual-studio-code"
 cask "vlc"
 cask "zoom"
-cask "zotero"
+cask "zotero@beta"
 
 {{- if eq .work true }}
 
