Add home/.config/bat/config Add home/.config/bat/themes/Catppuccin Frappe.tmTheme Add home/.config/bat/themes/Catppuccin Latte.tmTheme Add home/.config/bat/themes/Catppuccin Macchiato.tmTheme Add home/.config/bat/themes/Catppuccin Mocha.tmTheme Update home/.Brewfile

--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -181,7 +181,7 @@ cask "powershell"
 cask "pycharm"
 cask "raindropio"
 cask "safari-technology-preview"
-## cask "setapp" Installed once manually
+cask "setapp" Installed once manually
 cask "silentknight"
 cask "signal"
 cask "sf-symbols"
