--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -145,10 +145,12 @@ cask "arc"
 cask "beyond-compare"
 cask "caldigit-thunderbolt-charging"
 cask "caldigit-docking-utility"
+cask "camo-studio"
 cask "cheatsheet"
 cask "dash"
 cask "datagrip"
 cask "devonthink"
+cask "docker"
 cask "dotnet-sdk"
 cask "elgato-stream-deck"
 cask "firefox"
