--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -148,11 +148,11 @@ cask "caldigit-docking-utility"
 cask "camo-studio"
 cask "cheatsheet"
 cask "dash"
-cask "datagrip"
-cask "devonthink"
+# cask "datagrip"
+# cask "devonthink"
 cask "docker"
 cask "dotnet-sdk"
-cask "elgato-stream-deck"
+# cask "elgato-stream-deck"
 cask "firefox"
 cask "font-fira-code-nerd-font"
 cask "font-inconsolata"
@@ -162,17 +162,17 @@ cask "font-meslo-lg-nerd-font"
 cask "goland"
 cask "google-chrome"
 cask "google-cloud-sdk"
-cask "gpg-suite-no-mail"
+# cask "gpg-suite-no-mail"
 cask "grammarly-desktop"
 cask "hazel"
-cask "hidock"
-cask "intellij-idea"
+# cask "hidock"
+# cask "intellij-idea"
 cask "iterm2"
 cask "logi-options-plus"
 cask "kaleidoscope"
 cask "keyboard-maestro"
 cask "keyboardcleantool"
-cask "macupdater"
+# cask "macupdater"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
@@ -180,34 +180,31 @@ cask "obsidian"
 ## cask "omnifocus" Installed via TestFlight
 cask "postman"
 cask "powershell"
-cask "pycharm"
+# cask "pycharm"
 cask "raindropio"
-cask "safari-technology-preview"
+# cask "safari-technology-preview"
 cask "setapp" # Installed once manually
-cask "silentknight"
-cask "signal"
+# cask "silentknight"
+# cask "signal"
 cask "sf-symbols"
 cask "slack"
 cask "snagit"
 cask "soundsource"
-cask "sublime-text"
-cask "temurin17"
+# cask "sublime-text"
+# cask "temurin17"
 cask "textexpander"
 cask "tower"
-cask "transmit"
-cask "visual-studio-code-insiders"
+# cask "transmit"
+# cask "visual-studio-code-insiders"
 cask "visual-studio-code"
-cask "vlc"
+# cask "vlc"
 cask "zoom"
-cask "zotero@beta"
+# cask "zotero@beta"
 
 {{- if eq .work true }}
 
 cask "1password"
-cask "amazon-chime"
-cask "drawio"
-cask "openlens"
-cask "sublime-merge"
+# cask "amazon-chime"
 cask "wireshark"
 
 {{- end }}
