--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -19,6 +19,7 @@ brew "asciinema"
 brew "aspell"
 brew "bash"
 brew "bat"
+brew "bat-extras"
 brew "bottom"
 brew "brew-gem"
 brew "ccat"
@@ -38,6 +39,8 @@ brew "dos2unix"
 brew "findutils"
 brew "freetds"
 brew "fzf"
+brew "gem-colorls"
+brew "gem-marked-conductor"
 brew "gh"
 brew "ghostscript"
 brew "git-delta"
@@ -58,6 +61,7 @@ brew "highlight"
 brew "htop"
 brew "hub"
 brew "imagemagick"
+brew "ipcalc"
 brew "jenv"
 brew "jq"
 brew "jsonlint"
@@ -66,7 +70,6 @@ brew "less"
 brew "lesspipe"
 brew "libmagic"
 brew "lnav"
-brew "mdless"
 brew "minikube"
 brew "multimarkdown"
 brew "mysql"
@@ -81,9 +84,10 @@ brew "pinentry-mac"
 brew "pipx"
 brew "pre-commit"
 brew "pygments"
-brew "python@3.11"
+brew "python@3.12"
 brew "rbenv"
 brew "rename"
+brew "ruby"
 brew "ruby-build"
 brew "sipcalc"
 brew "source-highlight"
@@ -148,11 +152,10 @@ cask "caldigit-docking-utility"
 cask "camo-studio"
 cask "cheatsheet"
 cask "dash"
-# cask "datagrip"
-# cask "devonthink"
+cask "datagrip"
+cask "devonthink"
 cask "docker"
 cask "dotnet-sdk"
-# cask "elgato-stream-deck"
 cask "firefox"
 cask "font-fira-code-nerd-font"
 cask "font-inconsolata"
@@ -162,17 +165,13 @@ cask "font-meslo-lg-nerd-font"
 cask "goland"
 cask "google-chrome"
 cask "google-cloud-sdk"
-# cask "gpg-suite-no-mail"
 cask "grammarly-desktop"
 cask "hazel"
-# cask "hidock"
-# cask "intellij-idea"
 cask "iterm2"
 cask "logi-options-plus"
 cask "kaleidoscope"
 cask "keyboard-maestro"
 cask "keyboardcleantool"
-# cask "macupdater"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
@@ -185,7 +184,7 @@ cask "raindropio"
 # cask "safari-technology-preview"
 cask "setapp" # Installed once manually
 # cask "silentknight"
-# cask "signal"
+cask "signal"
 cask "sf-symbols"
 cask "slack"
 cask "snagit"
@@ -194,17 +193,15 @@ cask "soundsource"
 # cask "temurin17"
 cask "textexpander"
 cask "tower"
-# cask "transmit"
+cask "transmit"
 # cask "visual-studio-code-insiders"
 cask "visual-studio-code"
 # cask "vlc"
 cask "zoom"
-# cask "zotero@beta"
 
 {{- if eq .work true }}
 
 cask "1password"
-# cask "amazon-chime"
 cask "wireshark"
 
 {{- end }}
@@ -217,9 +214,11 @@ cask "brave-browser"
 cask "curseforge"
 cask "discord"
 cask "dropbox-beta"
+cask "elgato-stream-deck"
 cask "fastscripts"
 cask "imazing"
 cask "little-snitch"
+cask "macupdater"
 cask "mailmate"
 cask "minecraft"
 cask "parallels"
@@ -228,6 +227,7 @@ cask "skim"
 cask "tor-browser-alpha"
 cask "viscosity"
 cask "warp"
+cask "zotero@beta"
 
 {{- end }}
 
