--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -9,7 +9,6 @@
 {{- $shared := false -}}    {{/* true if this is a shared machine */}}
 {{- "" -}}
 
-
 {{- $chezmoiForce := or (has "--force" .chezmoi.args) (has "--force=true" .chezmoi.args) -}}
 {{- $interactive := and stdinIsATTY (not $chezmoiForce) -}}
 
@@ -77,6 +76,15 @@ git:
   autoPush: true
 diff:
   pager: delta
+textconv:
+- pattern: "**/*.plist"
+  command: "plutil"
+  args:
+  - "-convert"
+  - "xml1"
+  - "-o"
+  - "-"
+  - "-"
 data:
     name: {{ $name | quote }}
     email: {{ $email | quote }}
