Update home/.aws/config Add home/.zsh/catppuccin_frappe-zsh-syntax-highlighting.zsh Add home/.zsh/catppuccin_latte-zsh-syntax-highlighting.zsh Add home/.zsh/catppuccin_macchiato-zsh-syntax-highlighting.zsh Add home/.zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh Update home/.gitconfig

--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -179,6 +179,14 @@ followTags = true
     file-style = bold yellow ul
     file-decoration-style = none
 
+{{- $ghPath := lookPath "gh" }}
+{{- if $ghPath }}
+[credential "https://github.com"]
+	helper = !{{ $ghPath }} auth git-credential
+[credential "https://gist.github.com"]
+	helper = !{{ $ghPath }} auth git-credential
+{{- end }}
+
 [credential]
 	helper = osxkeychain
 
