Update home/.chezmoidata/packages.yaml Remove home/.jira.d/config.yml Update home/.zshrc Update home/.Brewfile

--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -9,6 +9,7 @@ tap "homebrew/bundle"
 tap "jandedobbeleer/oh-my-posh"
 tap "ttscoff/thelab"
 tap "warrensbox/tap"
+tap "ankitpokhrel/jira-cli"
 
 # ============================================================================
 # = Homebrew packages
@@ -127,7 +128,7 @@ brew "docker-credential-helper"
 brew "docker"
 brew "dockutil"
 brew "gitmoji"
-brew "go-jira"
+brew "jira-cli"
 brew "iam-policy-json-to-terraform"
 brew "terraform-docs"
 
