--- a/home/.chezmoiscripts/linux/run_onchange_after_configure-gnome.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_configure-gnome.sh.tmpl
@@ -1,4 +1,4 @@
-{{ if (and (not .ephemeral) (not .headless)) -}}
+{{ if (and (not .transient) (not .headless)) -}}
 #!/bin/bash
 
 set -eufo pipefail
