chore: more windows testing and fixing

--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -186,9 +186,11 @@ followTags = true
 {{- if $ghPath }}
 
 [credential "https://github.com"]
-	helper = !"{{ $ghPath }}" auth git-credential
+  helper =
+	helper = !'{{ $ghPath }}' auth git-credential
 [credential "https://gist.github.com"]
-	helper = !"{{ $ghPath }}" auth git-credential
+	helper =
+  helper = !'{{ $ghPath }}' auth git-credential
 {{- end }}
 
 
