--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -169,7 +169,7 @@ cask "google-cloud-sdk"
 cask "grammarly-desktop"
 cask "hazel"
 cask "iterm2"
-cask "logi-options-plus"
+# cask "logi-options-plus" This is causing issues on my machines
 cask "kaleidoscope"
 cask "keyboard-maestro"
 cask "keyboardcleantool"
