--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -151,7 +151,7 @@ followTags = true
     diffFilter = delta --color-only
 
 [merge]
-	tool = Kaleidoscope
+	tool = bcomp
 
 [mergetool]
     prompt = false
