--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -51,6 +51,17 @@ output = yaml
 region = us-west-2
 sso_account_id = 460535612184
 
+# Shared Services
+[profile sharedservices-admin]
+sso_region = us-east-2
+sso_registration_scopes = sso:account:access
+sso_role_name = AWSAdministratorAccess
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-east-2
+sso_account_id = 739275481264
+
+
 ################################################################################
 # Global Networking
 ################################################################################
