--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -58,7 +58,7 @@ sso_registration_scopes = sso:account:access
 sso_role_name = AWSAdministratorAccess
 sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
 output = yaml
-region = us-east-2
+region = us-west-2
 sso_account_id = 739275481264
 
 
