Update home/.chezmoi.yaml Update home/.gitconfig

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -71,7 +71,7 @@
 {{- $name := "Mark E. Schill" -}}
 {{- $email := "" -}}
 {{- if $work -}}
-{{-   $email = "Mark.Schill@ncrvoyix.com" -}}
+{{-   $email = "Mark.Schill@candescent.com" -}}
 {{- else -}}
 {{-   $email = "Mark.Schill@cmschill.net" -}}
 {{- end -}}
