--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -94,11 +94,11 @@
     reword = commit --amend --only -v
     append = town append
     hack = town hack
-    kill = town kill
+    kill = town delete
     new-pull-request = town new-pull-request
     prepend = town prepend
     prune-branches = town prune-branches
-    rename-branch = town rename-branch
+    rename-branch = town rename
     repo = town repo
     ship = town ship
     sync = town sync
