Update home/.chezmoidata/packages.yaml Update home/.gitconfig

--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -174,7 +174,7 @@ followTags = true
 
 [git-town]
   contribution-regex = '^renovate/'
-  create-prototype-branches= true
+  new-branch-type = prototype
 {{- if eq .work true }}
   perennial-branches = dev qal pte stg prd nonprod prod production
 {{- end }}
