--- a/home/.chezmoiscripts/darwin/run_onchange_darwin-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_onchange_darwin-install-packages.sh.tmpl
@@ -1,15 +1,102 @@
 {{ if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 
-brew bundle --no-lock --file=/dev/stdin <<EOF
-{{ range .packages.darwin.taps -}}
+cat <<EOF
+
+
+####################################################################################################
+# HomeBrew Taps
+####################################################################################################
+
+#######################################
+# Global
+#######################################
+{{ range .packages.darwin.taps.global -}}
 tap {{ . | quote }}
 {{ end -}}
-{{ range .packages.darwin.brews -}}
+
+
+{{- if eq .personal true }}
+#######################################
+# Personal
+#######################################
+{{ range .packages.darwin.taps.personal }}
+tap {{ . | quote }}
+{{- end }}
+{{- end }}
+
+
+{{- if eq .work true }}
+#######################################
+# Work
+#######################################
+{{ range .packages.darwin.taps.work }}
+tap {{ . | quote }}
+{{- end }}
+{{- end }}
+
+
+####################################################################################################
+# HomeBrew Brews
+####################################################################################################
+
+#######################################
+# Global
+#######################################
+{{ range .packages.darwin.brews.global -}}
 brew {{ . | quote }}
 {{ end -}}
-{{ range .packages.darwin.casks -}}
+
+
+{{- if eq .personal true }}
+#######################################
+# Personal
+#######################################
+{{ range .packages.darwin.brews.personal }}
+brew {{ . | quote }}
+{{- end }}
+{{- end }}
+
+
+{{- if eq .work true }}
+#######################################
+# Work
+#######################################
+{{ range .packages.darwin.brews.work }}
+brew {{ . | quote }}
+{{- end }}
+{{- end }}
+
+####################################################################################################
+# HomeBrew Casks
+####################################################################################################
+
+#######################################
+# Global
+#######################################
+{{ range .packages.darwin.casks.global -}}
 cask {{ . | quote }}
 {{ end -}}
+
+
+{{- if eq .personal true }}
+#######################################
+# Personal
+#######################################
+{{ range .packages.darwin.casks.personal }}
+cask {{ . | quote }}
+{{- end }}
+{{- end }}
+
+
+{{- if eq .work true }}
+#######################################
+# Work
+#######################################
+{{ range .packages.darwin.casks.work }}
+cask {{ . | quote }}
+{{- end }}
+{{- end }}
+
 EOF
 {{ end -}}
